--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: Aviator
 description: Jekyll template for API documentation.
 url: "https://yitzig.github.io"
 baseurl: ""
-google_analytics_key:
+google_analytics_key: UA-136321049-1
 permalink: pretty
 
 # -----
