--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 
 title: Aviator
 description: Jekyll template for API documentation.
-url: ""
-baseurl: "/api"
+url: "https://yitzig.github.io"
+baseurl: ""
 google_analytics_key: UA-136321049-1
 permalink: pretty
 
